--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -7,6 +7,8 @@
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
+    max-height: 60vh;
+    overflow-y: auto;
     position: absolute;
     background-color: #ffffff;
     min-width: 300px;
